Adding disclaimer to main page.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@ title: Home
       </div>
       <div class="tablet:grid-col-8 usa-prose">
         <h2 class="font-heading-xl margin-top-0 tablet:margin-bottom-0">
-          Med school for state officers
+          A Materials Pilot
         </h2>
-        <p>When you get down to it, doctors just want you to be healthy.</p>
-        <p>This course will help you develop tactics and strategies for getting your patients (states, vendors, and their projects) to come in for checkups more often, so you can help keep them healthy, on track, and delivering success.</p>
+        <p>These pages serve as a pilot for exploring project oversight while employing methods inspired by social learning theory. These pages do not represent policy or guidance from CMS.</p>
       </div>
     </div>
   </section>
